Слайдер отзывов юр лиц переведён на спрайты

--- a/index.html
+++ b/index.html
@@ -1586,8 +1586,8 @@
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur7.jpg" alt='Открытое Акционерное Общество "РОСТСЕЛЬМАШ"'
-                                             title='Открытое Акционерное Общество "РОСТСЕЛЬМАШ"' itemprop="image">
+                                        <span class="img bg-ur7" title='Открытое Акционерное Общество "РОСТСЕЛЬМАШ"'></span>
+
                                         <!--/Фото-->
                                         <!--текст(много текста для теста)-->
                                         <i itemprop="name">
@@ -1626,8 +1626,8 @@
                                 <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
                                 <div class="main_wrap text_wrap">
                                     <!--Фото-->
-                                    <p><img src="img/ur1.jpg" alt='ООО «Аксайская птицефабрика»'
-                                            title='ООО «Аксайская птицефабрика»' itemprop="image">
+                                    <p><span class="img bg-ur1" title='ООО «Аксайская птицефабрика»'></span>
+
                                         <!--/Фото-->
                                         <!--Текст отзыва-->
                                         <i itemprop="name">
@@ -1662,8 +1662,8 @@
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur2.jpg" alt='Детская стоматологическая клиника «Бобренок»'
-                                             title='Детская стоматологическая клиника «Бобренок»' itemprop="image">
+                                        <span class="img bg-ur2"  title='Детская стоматологическая клиника «Бобренок»'></span>
+
                                         <!--текст-->
                                         <i itemprop="name">
                                             Детская стоматологическая клиника «Бобренок». СОТРУДНИЧАЕМ С ООО КОМПАНИЯ
@@ -1688,16 +1688,15 @@
 
                         <!--Отзыв юр лиц4-->
                         <div class="entity_wrap_slider_slide"
-                             data-name='Мультибрендовый сервисный центр: "Вечный двигатель"' itemscope=""
+                             data-name='Мультибрендовый сервисный центр: "Вечный двигатель"'
                              itemtype="http://schema.org/comment">
                             <div class="text_block">
                                 <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur3.jpg" alt='Мультибрендовый сервисный центр: "Вечный двигатель"'
-                                             title='Мультибрендовый сервисный центр: "Вечный двигатель"'
-                                             itemprop="image">
+                                        <span class="img bg-ur3"  title='Мультибрендовый сервисный центр: "Вечный двигатель"'></span>
+
                                         <!--/Фото-->
                                         <!--текст-->
                                         <i itemprop="name">
@@ -1726,8 +1725,8 @@
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur4.jpg" alt='Компания "Глория Джинс"'
-                                             title='Компания "Глория Джинс"' itemprop="image">
+                                        <span class="img bg-ur4"   title='Компания "Глория Джинс"'></span>
+
                                         <!--/Фото-->
                                         <!--текст-->
                                         <i itemprop="name">
@@ -1756,8 +1755,8 @@
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur5.jpg" alt='Акционерное общество «Донэнерго»'
-                                             title='Акционерное общество «Донэнерго»' itemprop="image">
+                                        <span class="img bg-ur5" title='Акционерное общество «Донэнерго»'></span>
+
                                         <!--/Фото-->
                                         <!--текст-->
                                         <i itemprop="name">
@@ -1785,10 +1784,8 @@
                                 <div class="main_wrap text_wrap">
                                     <p>
                                         <!--Фото-->
-                                        <img src="img/ur6.jpg"
-                                             alt='Северо-Кавказская железная дорога - филиал ОАО "РЖД"'
-                                             title='Северо-Кавказская железная дорога - филиал ОАО "РЖД"'
-                                             itemprop="image">
+                                        <span class="img bg-ur6" title='Северо-Кавказская железная дорога - филиал ОАО "РЖД"'></span>
+
                                         <!--/Фото-->
                                         <!--текст(много текста для теста)-->
                                         <i itemprop="name">
