--- a/index.html
+++ b/index.html
@@ -277,19 +277,19 @@
         <div class="modal_wrap">
             <div class="foto_block schem_big_block modal" id="foto">
                 <a href="javascript:void(0)" class="close_foto"><i></i></a>
-                <img src="img/schema/Vimtex.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
+               <span class="bg-Vimtex"></span>
             </div>
             <!--блок с миниатюрами схем-->
             <div class="miniature_block modal">
                 <a href="javascript:void(0)" class="close_mini"></a>
                 <a href="#foto" class="img">
-                    <img src="img/foto.jpg" alt="Витрина" title="Витрина">
+                    <span class="bg-foto"></span>
                 </a>
                 <a href="#map_big" class="img">
-                    <img src="img/map.jpg" alt="map" title="map">
+                   <span class="bg-map"></span>
                 </a>
                 <a href="#schem_big" class="img">
-                    <img src="img/schema.jpg" alt="schema" title="schema">
+                    <span class="bg-schema"></span>
                 </a>
             </div>
             <!--/миниатюры-->
@@ -1933,10 +1933,8 @@
                     </div>
                     <div class="schem_big_block__schem_block_table">
                         <div class="schem_big_block__schem_block_img_block">
-                            <img src="img/schema/schem1.png" class="action schem_img" alt="schema1" title="schema1"
-                                 id="schem1">
-                            <img src="img/schema/schem2.png" class="schem_img" alt="schema2" title="schema2"
-                                 id="schem2">
+                           <span id="schem1" class="schem_img"></span>
+                            <span id="schem2" class="schem_img"></span>
                         </div>
                     </div>
                 </div>
