Переведён на спрайты блок спасибо

--- a/index.html
+++ b/index.html
@@ -1834,7 +1834,7 @@
                 </div>
                 <div class="thenk_block_logo">
                     <a href="index.html">
-                        <img src="img/logo_thenk.png" alt="ВИМТЕХ" title="ВИМТЕХ">
+                        <span></span>
                         <p>Прохлада в доме не должна стоить дорого! </p>
                     </a>
                 </div>
