Попап гарантия переведён на спрайт

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="garant_block_section">
                 <div class="garant_block_section_img">
-                    <img src="img/garant.jpg" alt="Гарантийный талон">
+                   <span class="bg-garant"></span>
                 </div>
                 <div class="garant_block_section_text">
                     <h2 class="zag_block">Гарантии на сплит-системы</h2>
